fix: main overflow

--- a/huddle-landing-page/styles.css
+++ b/huddle-landing-page/styles.css
@@ -125,6 +125,8 @@ header {
 
 main {
     position: relative;
+    overflow-x: hidden;
+
 }
 
 section {
